--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,15 @@
 [package]
 name = "coloursum"
+description = "🎨 Colourise your checksum output"
 version = "0.1.0"
 authors = ["Jessica Stokes <hello@jessicastokes.net>"]
 edition = "2018"
+repository = "https://github.com/ticky/coloursum"
+readme = "Readme.md"
+license = "MIT"
+
+[badges]
+travis-ci = { repository = "ticky/coloursum", branch = "develop" }
 
 [dependencies]
 ansi_term = "0.11.0"
