--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ travis-ci = { repository = "ticky/coloursum", branch = "develop" }
 [dependencies]
 ansi_term = "0.11.0"
 itertools = "0.8.0"
+structopt = "0.2.15"
