--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,6 @@ travis-ci = { repository = "ticky/coloursum", branch = "develop" }
 
 [dependencies]
 ansi_term = "0.11.0"
+ecoji = "1.0.0"
 itertools = "0.8.0"
 structopt = "0.2.15"
