--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -43,5 +43,8 @@ jobs:
         with:
           submodules: true
 
+      - name: Test & Coverage Reporting
+        uses: actions-rs/tarpaulin@v0.1
+
       - name: Upload to codecov.io
         uses: codecov/codecov-action@v1.0.2
