--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,9 @@ codecov = { repository = "ticky/coloursum", branch = "develop" }
 
 [dependencies]
 ansi_term = "0.11.0"
+clap = { version = "3.0", features = ["derive"] }
 ecoji = "1.0.0"
 itertools = "0.8.0"
-structopt = "0.2.15"
 
 [dev-dependencies]
 indoc = "0.3.3"
