--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -6,45 +6,22 @@ on:
   pull_request:
     branches: [ develop ]
 
-env:
-  CARGO_TERM_COLOR: always
-
 jobs:
   build:
+
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          submodules: true
-
-      - name: Build
-        run: cargo build --verbose
-
-  clippy:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          submodules: true
-
-      - name: Clippy
-        uses: actions-rs/clippy-check@v1
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          args: --all-features
-
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          submodules: true
-
-      - name: Test & Coverage Reporting
-        uses: actions-rs/tarpaulin@v0.1
-
-      - name: Upload to codecov.io
-        uses: codecov/codecov-action@v3.1.1
+    - name: Checkout
+      uses: actions/checkout@v3
+    - name: Build
+      run: cargo build --verbose
+    - name: Run tests
+      run: cargo test --verbose
+    - name: Install Clippy
+      run: rustup component add clippy
+    - name: Clippy
+      uses: actions-rs/clippy-check@v1
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        args: --all-features
